Fix/DVK-1025 and DVK-1028: map clipping and wrong info text. (#632)
* DVK-1028: Fix to map clipping issue.

* DVK-1025: Fix wrong info text.

* Tweak map wrapper styles.

--- a/admin/src/components/map/DvkMap.css
+++ b/admin/src/components/map/DvkMap.css
@@ -13,6 +13,9 @@
   min-height: calc(var(--map-height-portrait) + 59.5px);
   background: #cccccc;
 }
+.mapExportTool > ion-row > ion-col:first-of-type {
+  min-height: calc(var(--map-height-portrait) + 59.5px);
+}
 
 .ios .dvkMap .ol-layers {
   z-index: -1 !important;
